--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^7.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.4.0"
+    "react-intersection-observer": "^9.4.0",
+    "react-tooltip": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
